--- a/style.css
+++ b/style.css
@@ -30,11 +30,15 @@ ul,ol {
 /*start land-page */
 .land-page {
     width: 100%;
-    height: calc(100vh - 0.625rem);
+    min-height: 100vh;
     background-image: url(images/background.jpeg);  
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 12.5rem;
 }
 
 header {
@@ -84,10 +88,57 @@ ul li a:hover {
 
 .land-page span {
     color: #4e9eff;
-    font-size: 3em;
+    font-size: 3.8em;
     font-weight: 600;
+    text-transform:capitalize;
+    margin-top: 10px;
+    margin-bottom: 30px;
+    display: block;
+}
+
+.land-page p {
+    color: #fff;
+    text-transform: capitalize;
+    font-size: 2em;
+    margin-bottom: 30px;
+    font-weight: bold;
+}
+
+.land-page button {
+    color: #fff;
+    background-color: #3a6cf4;
+    font-size: 1.1em;
+    font-weight: 600;
+    padding: 0.9375em 2.1875em;
+    letter-spacing: 1px;
+    border-radius: 15px;
+    margin: bottom 40px;
+    display: inline-block;
+    transition: 0.7s ease;
+    cursor: pointer;
+    margin-bottom: 30px;
+}
+
+.land-page button:hover {
+    background-color: #0a49f6;
+    transform: scale(1.1);
+}
+
+.icon-holder {
+    display: flex;
+    gap: 25px;
+}
+
+.land-page i {
+    color: white;
+    font-size: 25px;
+    cursor: pointer;
 }
 /*end land-page */
+
+/* start Services */
+
+/* start Services */
 
 /* reoponsive */
 
@@ -110,6 +161,18 @@ ul li a:hover {
 @media (max-width: 1024px) {
     header {
         padding: 0.625rem 1rem;
+    }
+
+    .land-page{
+        padding: 0.625rem 1rem;
+    }
+
+    .land-page span {
+        font-size: 2.4em;
+    }
+
+    .land-page p {
+        font-size: 1.3em;
     }
 }
 
